# online_ai_music

./: AION_v2_Enterprise_Master_Implementation_Prompt.md
AION_Update_003/: README.md  (+1 more)
online_ai_music_repo_setup/: .env.example  01-clone-and-bootstrap.sh  02-bootstrap-existing-clone.sh  03-review-commit-push.sh  Makefile  README.md  alembic.ini  install-permissions.sh  pyproject.toml
online_ai_music_repo_setup/apps/api/: Dockerfile
online_ai_music_repo_setup/bootstrap/: 00-bootstrap-aion.sh  01-init-git.sh  02-create-repository-structure.sh  03-create-governance-docs.sh  04-create-product-docs.sh  05-create-architecture-docs.sh  06-create-ai-context.sh  07-create-service-templates.sh  08-create-infrastructure.sh  09-create-testing-quality.sh  10-create-github-automation.sh  11-validate-repository.sh  README.md  install.sh
online_ai_music_repo_setup/bootstrap/lib/: common.sh
online_ai_music_repo_setup/database/migrations/: env.py
online_ai_music_repo_setup/docs/00-overview/: current-mvp-summary.md  mvp-status-after-update-012.md  mvp-user-flow.md
online_ai_music_repo_setup/docs/01-product/: vision.md
online_ai_music_repo_setup/docs/02-business/: business-requirements.md
online_ai_music_repo_setup/docs/03-requirements/: mvp-001-core-audio.md  mvp-002-persistent-audio-jobs.md  mvp-003-audio-asset-retrieval.md  mvp-004-review-and-metadata.md  srs.md
online_ai_music_repo_setup/docs/04-architecture/: domain-model.md  mvp-application-architecture.md
online_ai_music_repo_setup/requirements/: dev.txt  runtime.txt
online_ai_music_repo_setup/tools/: README.md
(+184 files in other folders)
