[project]
name = "aion"
version = "0.1.0"
description = "AI Autonomous Content Operating System"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115,<1.0",
  "uvicorn[standard]>=0.34,<1.0",
  "sqlalchemy>=2.0,<3.0",
  "psycopg[binary]>=3.2,<4.0",
  "alembic>=1.14,<2.0",
  "pydantic>=2.10,<3.0",
  "pydantic-settings>=2.7,<3.0",
  "redis>=5.2,<6.0",
  "minio>=7.2,<8.0",
  "httpx>=0.28,<1.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3,<9.0",
  "pytest-asyncio>=0.25,<1.0",
  "ruff>=0.9,<1.0",
  "mypy>=1.14,<2.0",
]

[tool.pytest.ini_options]
pythonpath = ["apps/api", "apps/worker"]
testpaths = ["apps/api/tests", "apps/worker/tests"]

[tool.ruff]
line-length = 100
target-version = "py312"
