[project]
name = "aion-monorepo"
version = "0.1.0"
description = "AI Autonomous Content Operating System"
requires-python = ">=3.12"
dynamic = ["dependencies"]

[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = []

[tool.pytest.ini_options]
pythonpath = ["apps/api", "apps/worker"]
testpaths = ["apps/api/tests", "apps/worker/tests"]

[tool.ruff]
line-length = 100
target-version = "py312"
